feat: 한정수량 이벤트 응모 기능

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
 rootProject.name = 'car'
+
+
+include('event')
+include('event:application')
+include('event:batch')
+include('event:message:producer')
+include('event:message:consumer')
