refact: 쿠폰 서비스 헥사고날 아키텍쳐로 변경

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,10 @@ rootProject.name = 'car'
 include('event')
 include('event:application')
 include('event:batch')
-include('event:message:producer')
-include('event:message:consumer')
+include('event:core')
+include('event:infra')
+include('event:infra:persistence')
+include('event:infra:cache')
+include('event:infra:message')
+include('event:infra:message:producer')
+include('event:infra:message:consumer')
