--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -25,17 +25,14 @@ repositories {
 
 dependencies {
 
-    implementation project(':event:core')
-    implementation project(':event:infra:cache')
-    implementation project(':event:infra:persistence')
-    implementation project(':event:infra:message:producer')
-//    implementation project(':event:infra:message:consumer')
-
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    // database
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
