--- a/event/infra/message/consumer/build.gradle
+++ b/event/infra/message/consumer/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'hey.used.event'
+group = 'hey.used.event.consumer'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -25,20 +25,22 @@ repositories {
 
 dependencies {
 
+    // 모듈 참조
     implementation project(':event:core')
-    implementation project(':event:infra:cache')
-    implementation project(':event:infra:persistence')
-    implementation project(':event:infra:message:producer')
-//    implementation project(':event:infra:message:consumer')
 
-    // spring
+
+    // Spring Boot & Kafka
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.kafka:spring-kafka'  // Kafka Consumer 사용
+
+    // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
