--- a/event/infra/message/producer/build.gradle
+++ b/event/infra/message/producer/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'hey.used.event'
+group = 'hey.used.event.producer'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -24,21 +24,25 @@ repositories {
 }
 
 dependencies {
-
     implementation project(':event:core')
-    implementation project(':event:infra:cache')
-    implementation project(':event:infra:persistence')
-    implementation project(':event:infra:message:producer')
-//    implementation project(':event:infra:message:consumer')
 
-    // spring
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Spring Boot 기본 기능
+    implementation 'org.springframework.boot:spring-boot-starter'
 
+    // Kafka Producer
+    implementation 'org.springframework.kafka:spring-kafka'
 
+    // JSON 직렬화 (Kafka 메시지 직렬화 용도)
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+    // Lombok (코드 간소화)
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Validation (데이터 검증)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // 테스트 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
