--- a/event/infra/persistence/build.gradle
+++ b/event/infra/persistence/build.gradle
@@ -24,23 +24,27 @@ repositories {
 }
 
 dependencies {
-
     implementation project(':event:core')
-    implementation project(':event:infra:cache')
-    implementation project(':event:infra:persistence')
-    implementation project(':event:infra:message:producer')
-//    implementation project(':event:infra:message:consumer')
 
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // mapstruct
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+
+
 }
 
 tasks.named('test') {
