test: 통합 테스트 코드 작성

--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
     // database
     runtimeOnly 'com.mysql:mysql-connector-j'
