--- a/event/application/build.gradle
+++ b/event/application/build.gradle
@@ -25,20 +25,21 @@ repositories {
 
 dependencies {
 
+    // module
     implementation project(':event:core')
     implementation project(':event:infra:cache')
     implementation project(':event:infra:persistence')
     implementation project(':event:infra:message:producer')
-//    implementation project(':event:infra:message:consumer')
 
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-
+    // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
