--- a/event/infra/persistence/build.gradle
+++ b/event/infra/persistence/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
